--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- <section class="container"> -->
       <div class="card">
-        <img src="/assets/image/avatar.png" alt="profile image" />
+        <img src="assets/image/avatar.png" alt="profile image" />
         <h2>Pabi Humble</h2>
         <h4>Banjul, The Gambia</h4>
         <p>"Front-end developer and avid reader."</p>
@@ -41,6 +41,6 @@
     <!-- </section> -->
      <div class="follower" id="follower"></div>
 
-    <script src="script/script.js"></script>
+    <script src="/script/script.js"></script>
   </body>
 </html>
