--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <!-- </section> -->
      <div class="follower" id="follower"></div>
 
-    <script src="/script/script.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
