--- a/index.html
+++ b/index.html
@@ -8,39 +8,43 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="icon" href="assets/image/favicon-32x32.png">
     <title>Social link Profile</title>
   </head>
   <body>
     <!-- <section class="container"> -->
-      <div class="card">
-        <img src="assets/image/avatar.png" alt="profile image" />
-        <h2>Pabi Humble</h2>
-        <h4>Banjul, The Gambia</h4>
-        <p>"Front-end developer and avid reader."</p>
-        <div class="social-links">
-            <!-- Github with my instagram link -->
-          <a href="https://www.Instagram.com/pabicamz">GitHub</a>
-        </div>
-        <!-- Frontend Mentor -->
-        <div class="social-links">
-          <a href="https://www.frontendmentor.io/profile/karamo10">Frontend Mentor</a>
-        </div>
-        <!-- LinkedIn -->
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/karamo-camara-ab4619339/">LinkedIn</a>
-        </div>
-        <!-- Twitter -->
-        <div class="social-links">
-          <a href="https://x.com/pabicamz">Twitter</a>
-        </div>
-        <!-- Instagram -->
-        <div class="social-links">
-          <a href="https://www.Instagram.com/pabicamz">Instagram</a>
-        </div>
+    <div class="card">
+      <img src="assets/image/avatar-jessica.jpeg" alt="profile image" />
+      <h2>Jessica Randall</h2>
+      <h4>London, United Kingdom</h4>
+      <p>"Front-end developer and avid reader."</p>
+      <div class="social-links">
+        <!-- Github with my instagram link -->
+        <a href="https://www.Instagram.com/pabicamz">GitHub</a>
       </div>
+      <!-- Frontend Mentor -->
+      <div class="social-links">
+        <a href="https://www.frontendmentor.io/profile/karamo10"
+          >Frontend Mentor</a
+        >
+      </div>
+      <!-- LinkedIn -->
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/karamo-camara-ab4619339/"
+         >LinkedIn</a
+        >
+      </div>
+      <!-- Twitter -->
+      <div class="social-links">
+        <a href="https://x.com/pabicamz">Twitter</a>
+      </div>
+      <!-- Instagram -->
+      <div class="social-links">
+        <a href="https://www.Instagram.com/pabicamz">Instagram</a>
+      </div>
+    </div>
     <!-- </section> -->
-     <div class="follower" id="follower"></div>
-
+    <div class="follower" id="follower"></div>
     <script src="script/script.js"></script>
   </body>
 </html>
