--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </div>
     <!-- </section> -->
     <div class="follower" id="follower"></div>
-    <script src="script/script.js"></script>
+
+    <script src="style/script.js"></script>
   </body>
 </html>
