--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="icon" href="assets/image/favicon-32x32.png">
+    <link rel="icon" href="assets/image/favicon-32x32.png" />
     <title>Social link Profile</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
       <!-- LinkedIn -->
       <div class="social-links">
         <a href="https://www.linkedin.com/in/karamo-camara-ab4619339/"
-         >LinkedIn</a
+          >LinkedIn</a
         >
       </div>
       <!-- Twitter -->
@@ -46,6 +46,31 @@
     <!-- </section> -->
     <div class="follower" id="follower"></div>
 
-    <script src="style/script.js"></script>
+    <script>
+      const follower = document.getElementById('follower');
+
+      let mouseX = window.innerWidth / 2;
+      let mouseY = window.innerHeight / 2;
+
+      let targetX = mouseX;
+      let targetY = mouseY;
+
+      document.addEventListener('mousemove', (e) => {
+        targetX = e.clientX;
+        targetY = e.clientY;
+      });
+
+      function moveFollower() {
+        mouseX += (targetX - mouseX) * 0.1;
+        mouseY += (targetY - mouseY) * 0.1;
+
+        follower.style.left = `${mouseX}px`;
+        follower.style.top = `${mouseY}px`;
+
+        requestAnimationFrame(moveFollower);
+      }
+
+      moveFollower();
+    </script>
   </body>
 </html>
